Better Etag handling for datasets
